@@ -1,7 +1,7 @@
 ----- Summary ------------------------------------------------------------------
 
 Issues opened recently: 0
-Issues closed recently: 3 (C.18, C.24, D.1, E.10)
+Issues closed recently: 3 (C.18, C.24, D.1, E.5, E.10)
                              open / closed
 A. Release stopping bugs:       0 / 1
 B. Normal bugs:                 3 / 5
